# Atom

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  TERMINAL_INTEGRATION.md  build.ps1  build.sh
arch/x86_64/: boot.asm  mod.rs  uefi.rs
kernel/: Cargo.toml  ui_shell.atxf
kernel/src/: boot.rs  build_info.rs  cap.rs  executable.rs  graphics.rs  init_process.rs  input.rs  ipc.rs  irq_forward.rs  kernel.rs  keyboard.rs  log.rs  mouse.rs  sched.rs  serial.rs  service_manager.rs  shared_mem.rs  shell.rs  system.rs  thread.rs  ui.rs  ui_shell.atxf  ui_shell_binary.rs  userspace_api.rs  userspace_drivers.rs  util.rs  vga.rs
kernel/src/arch/: gdt.rs  mod.rs
kernel/src/interrupts/: apic.rs  handlers.asm  handlers.rs  idt.rs  mod.rs  switch.asm
kernel/src/mm/: addrspace.rs  heap.rs  mod.rs  pmm.rs  policy.rs  vm.rs
kernel/src/syscall/: handler.asm  mod.rs
linker/: x86_64-uefi.ld
tools/: build_atxf.py  embed_binary.py
tools/elf2atxf/: Cargo.toml  rust-toolchain.toml
tools/elf2atxf/.cargo/: config.toml
tools/elf2atxf/src/: main.rs
tools/embed_binary/: Cargo.toml  README.md
tools/embed_binary/src/: main.rs
userspace/: userspace.ld
userspace/drivers/: README.md  ps2_keyboard.c  ps2_mouse.c  syscalls.h
userspace/drivers/display/: Cargo.toml
userspace/drivers/display/.cargo/: config.toml
userspace/drivers/display/src/: main.rs
userspace/drivers/keyboard/: Cargo.toml
userspace/drivers/keyboard/src/: main.rs
userspace/drivers/mouse/: Cargo.toml
userspace/drivers/mouse/.cargo/: config.toml
userspace/drivers/mouse/src/: main.rs
userspace/drivers/terminal/: Cargo.toml
userspace/drivers/terminal/.cargo/: config.toml
userspace/drivers/terminal/src/: buffer.rs  input.rs  ipc_client.rs  main.rs  parser.rs  window.rs
userspace/drivers/terminal/src/commands/: filesystem.rs  mod.rs  process.rs  system.rs
userspace/drivers/ui_shell/: Cargo.toml  linker.ld
userspace/drivers/ui_shell/.cargo/: config.toml
userspace/drivers/ui_shell/src/: main.rs
userspace/libs/libgui/: Cargo.toml
userspace/libs/libgui/src/: app.rs  application.rs  color.rs  drawing.rs  event.rs  font.rs  lib.rs  surface.rs
userspace/libs/libipc/: Cargo.toml
userspace/libs/libipc/src/: client.rs  error.rs  lib.rs  messages.rs  ports.rs  protocol.rs  serialization.rs  server.rs  services.rs
userspace/libs/syscall/: Cargo.toml
userspace/libs/syscall/src/: alloc.rs  debug.rs  error.rs  graphics.rs  input.rs  io.rs  ipc.rs  lib.rs  raw.rs  thread.rs
