[workspace]
members = [
    "kernel",
    "userspace/libs/syscall",
    "userspace/libs/libipc",
    "userspace/libs/libgui",
]
# Os drivers userspace serao compilados separadamente como binarios ATXF
# quando o loader de executaveis estiver pronto.
exclude = [
    "userspace/drivers/keyboard",
    "userspace/drivers/mouse",
    "userspace/drivers/display",
    "userspace/drivers/ui_shell",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1