[workspace]
members = [
    "kernel",
    "userspace/libs/syscall",
]
# Os drivers userspace serao compilados separadamente como binarios ATXF
# quando o loader de executaveis estiver pronto.
# Por enquanto, o kernel usa um shell embutido (shell.rs).
exclude = [
    "userspace/drivers/keyboard",
    "userspace/drivers/mouse",
    "userspace/drivers/display",
    "userspace/drivers/ui_shell",
    "tools/elf2atxf",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
