[package]
name = "atom_desktop"
version = "0.1.0"
edition = "2021"
authors = ["Atom OS Contributors"]
description = "Atom Desktop Environment - Compositor and Window Manager"

[workspace]

[dependencies]
atom_syscall = { path = "../../libs/syscall" }
libipc = { path = "../../libs/libipc" }

[[bin]]
name = "atom_desktop"
path = "src/main.rs"
